--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,29 +7,8 @@
   </h1>
   <div>Your City, Your Weather Forecast, Right now !!!!! Built Using Angular 6</div>
   <h2>Current Weather</h2>
-  <div>current weather</div>
+  <app-current-weather> </app-current-weather>
 </div>
-
-<ul>
-  <li> </li>
-</ul>
-<p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
-</p>
-
 
 <footer style="text-align:right">
   Copyright © 2018 Pandu
