--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,10 @@
 
+
 body {
-    background-color: lightsalmon;
+    margin: auto 10px;
+    width: auto;
+    height: 700px;
+    background-color: #5446b0;
     
 }
 
@@ -11,11 +15,12 @@ h2 {
 }
 
 h1 {
-    color: rgb(72, 20, 131);
+    color: rgb(49, 63, 29);
     text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-p {
-    font-family: 'Courier New', Courier, monospace;
+h3 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
 }
