--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
   <h1>
     Local Weather !!!!
   </h1>
-  <div>Your City, Your Weather Forecast, Right now !!!!! Built Using Angular 6</div>
-  <h2>Current Weather</h2>
+  <h2>Your City, Your Weather Forecast, Right now !!!!! Built Using Angular 6</h2>
+  <h3>Current Weather</h3>
   <app-current-weather> </app-current-weather>
 </div>
 
