--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <h1>
     Local Weather !!!!
   </h1>
-  <h2>Your City, Your Weather Forecast, Right now !!!!! Built Using Angular 6</h2>
+  <div class="text">Your City, Your Weather Forecast, Right now !!!!! Built Using Angular 6</div>
   <h3>Current Weather</h3>
   <app-current-weather> </app-current-weather>
 </div>
